# VINS-Mono

config/: vins_rviz_config.rviz
config/kinect2/: kinect2_config.yaml
config/realsense/: realsense_color_hustac_config.yaml  realsense_fisheye_hustac_config.yaml
feature_tracker/src/: feature_tracker.h
pose_graph/src/: pose_graph.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: kinect2.launch  realsense_color_hustac.launch  realsense_fisheye_hustac.launch
vins_estimator/src/: check_bag.cpp  estimator.cpp  estimator.h  estimator_base.cpp  estimator_node.cpp  excalib.cpp  feature_manager.cpp  feature_manager.h  modify_bag.cpp  odom-vio_ex_calib.cpp  odom-vio_ex_calib.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: base_odom_factor.h  base_odom_integration.h  base_odom_intergration.cpp  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  plane_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: ImuUtility.cpp  ImuUtility.h  utility.h  visualization.cpp  visualization.h
